fixed alignment-issue

--- a/workbenchfx-core/src/main/resources/com/dlsc/workbenchfx/css/_addModulePage.scss
+++ b/workbenchfx-core/src/main/resources/com/dlsc/workbenchfx/css/_addModulePage.scss
@@ -7,7 +7,7 @@
             -fx-vgap: px(42);
             -fx-hgap: px(42);
             -fx-padding: px(21);
-            -fx-alignment: center center;
+            -fx-alignment: CENTER;
 
             & .tile-control {
               -fx-padding: px(21);
